samples/_failures_safe/1761432502_da8cb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a050b869.c: In function ‘main’:
./samples/SAFE/__tmp_a050b869.c:152:13: error: expected declaration or statement at end of input
  152 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_a050b869.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a050b869.c:152:13: error: expected declaration or statement at end of input
